--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -1087,7 +1087,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** The logistic regression model is very good at predicting the resampled data to detect if a loan will be a healthy loan (0) because of the high precision score of 100%, recall score of 99% and f1 score of 100%. The model became better at predicting if a loan will be a high-risk loan (1) because of its higher recall and f1 scores when compared to its recall and f1 scores before it the data was resampled."
    ]
   }
  ],
