--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -365,15 +365,15 @@
        "30.0144"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Ratio of 0s to 1s\n",
-    "ratio = y.value_counts().values[0] / y.value_counts().values[1]\n",
-    "ratio"
+    "# Ratio of 0s to 1s label inputs\n",
+    "label_input_ratio = y.value_counts().values[0] / y.value_counts().values[1]\n",
+    "label_input_ratio"
    ]
   },
   {
@@ -719,8 +719,8 @@
     "\n",
     "**Answer:** \n",
     "The logistic regression model is very good at predicting if a loan will be a healthy loan (`0`) because of the high precision score of 100%, recall score of 99% and f1 score of 100%. \n",
-    "The model is somewhat good at predicting if a loan will be a high-risk loan (`1`) because of its lower precision, recall and f1 scores when compared to the scores of a healthy loan prediction. This maybe because the model had way more data inputs for healthy loan (`0`) than high-risk (`1`) loan.\n",
-    "The original data had 30 times more data for healthy loans (`0s`) than for high-risk loans (`1s`).\n"
+    "The model is somewhat good at predicting if a loan will be a high-risk loan (`1`) because of its lower precision, recall and f1 scores when compared to the scores of a healthy loan prediction. This maybe because the model had way more label inputs for healthy loan (`0`) than high-risk (`1`) loan.\n",
+    "The original data had 30 times more label inputs for healthy loans (`0s`) than for high-risk loans (`1s`) as seen from the `label_input_ratio` variable.\n"
    ]
   },
   {
@@ -1086,7 +1086,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The logistic regression model is very good at predicting the resampled data to detect if a loan will be a healthy loan (0) because of the high precision score of 100%, recall score of 99% and f1 score of 100%. The model became better at predicting if a loan will be a high-risk loan (1) because of its higher recall and f1 scores when compared to its recall and f1 scores before it the data was resampled."
+    "**Answer:** The logistic regression model is very good at predicting the resampled data to detect if a loan will be a healthy loan (0) because of the high precision score of 100%, recall score of 99% and f1 score of 100%. The model became better at predicting if a loan will be a high-risk loan (1) because of its higher recall and f1 scores when compared to its recall and f1 scores before the data was resampled."
    ]
   }
  ],
