--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -719,7 +719,7 @@
     "\n",
     "**Answer:** \n",
     "The logistic regression model is very good at predicting if a loan will be a healthy loan (`0`) because of the high precision score of 100%, recall score of 99% and f1 score of 100%. \n",
-    "The model is somewhat good at predicting if a loan will be a high-risk loan (`1`) because of its lower precision, recall and f1 scores when compared to the scores of a healthy loan prediction. This maybe because the model had way more label inputs for healthy loan (`0`) than high-risk (`1`) loan.\n",
+    "The model is somewhat good at predicting if a loan will be a high-risk loan (`1`) because of its lower precision, recall and f1 scores when compared to the scores of a healthy loan prediction. This maybe because the model had way more label inputs for healthy loans (`0s`) than high-risk loans (`1s`).\n",
     "The original data had 30 times more label inputs for healthy loans (`0s`) than for high-risk loans (`1s`) as seen from the `label_input_ratio` variable.\n"
    ]
   },
